# vmslideviewer

./: CMakeLists.txt
data/: vmslideviewer.desktop
include/: safebmp.h  slidecache.h  vmslideviewer.h  vmtilereader.h
resources/: vmslideviewer.qrc
src/: camelcase.pl  moc_testqt.cc  moc_vmslideviewer-qt.cc  qrc_vmslideviewer.cc  safebmp.cc  slidecache.cc  vmdrawingarea.cc  vmgooglemaps.cc  vmrangetool.cc  vmslidemain.cc  vmslidewindow.cc  vmthreads.cc  vmtilereader.cc  vmzoomarea.cc
